<resources>

    <string name="app_name">SmartWrist</string>
    <string name="edit_server">Enter Server IP</string>
    <string name="edit_port">Port</string>
    <string name="button_connect">Connect me</string>
    <string name="button_open_socket">Open UDP Socket</string>
    <string name="label_status"></string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_point">SmartWrist</string>
    <string name="label_heading_appliances">To calibrate appliance position click on item:</string>

</resources>