<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:focusable="true"
	android:focusableInTouchMode="true" >
    
	    <EditText android:id="@+id/edit_server_ip"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:hint="@string/edit_server" />
	    
	    <EditText android:id="@+id/edit_server_port"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:hint="@string/edit_port" />
	    
    
    </LinearLayout>
    
    <LinearLayout
    	android:layout_width="fill_parent"
		android:layout_height="wrap_content" >    
	    
	    <Button
	        android:id="@+id/button_connect"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_connect" />
	    
	    <Button
	        android:id="@+id/button_open_socket"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_open_socket" />
        
    </LinearLayout>
    
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
	    
	    <TextView
	        android:id="@+id/label_connection"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/label_status"/>
	    
	</LinearLayout>
	
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
	    
	    <TextView
	        android:id="@+id/label_status"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/label_status"/>
	    
	</LinearLayout>
	
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
	    
	    <TextView
	        android:id="@+id/label_heading_appliances"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/label_heading_appliances"/>
	    
	</LinearLayout>
	
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
	    
    	<ListView 
            android:id="@+id/list_appliances"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content" 
        	android:background="@color/white" >
    	</ListView>
        
    </LinearLayout>
    
</LinearLayout>